Added Bottom Summary Content

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
     -->
     
     <title>React App</title>
+    <style>
+    #root{
+      height:100%;
+    }
+      </style>
   </head>
   <body>
     <noscript>
