--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     
-    <title>React App</title>
+    <title>Adobe POC Dashboard</title>
     <style>
     #root{
       height:100%;
