--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-    <title>DME - Run the Business - Alpha Release</title>
+    <title>DME - Run the Business </title>
     <style>
         #root {
             height: 100%;
